the first version

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -4,49 +4,72 @@
 
   <div class="hello">
     <h1>Groupe scolaire la Pyramide</h1>
-    <h3>Aidons nos enfants a atteindre le sommet</h3>
+    <h3>Aidons nos enfants à atteindre le sommet</h3>
     <h5>A la Pyramide nous chantons l'excellence</h5>
     <a routerLink="../inscription">Inscrivez votre enfant ici</a>
     <!-- <a routerLink=""></a> -->
   </div>
+
+  <div class="utilites">
+
+      <!-- <li><a routerLink="">Liste des fournitures</a></li> -->
+      <a routerLink="dossiers-a-fournir">Dossiers à fournir</a>
+       <br>
+      <a routerLink="tarifs">Tarification</a>
+  </div>
+
   <div class="utilities">
 
     <div class="utility">
-      <h2><a routerLink="">Fournitures</a></h2>
-      <p>Retrouvez les fournitures de vos enfants <span><a routerLink="">ici</a></span></p>
+      <h2><a routerLink="/ape">APE</a></h2>
+      <p>Retrouvez toutes les informations concernants l'association des parents d'élève
+         <span><a routerLink="/ape">ici</a></span></p>
     </div>
 
-    <div class="utility">
-      <h2><a routerLink="">Activites</a></h2>
-      <p>Retrouvez les activitees de vos enfants <span><a routerLink="">ici</a></span></p>
-    </div>
+    <!-- <div class="utility">
+      <h2><a routerLink="">Activités</a></h2>
+      <p>Retrouvez les activités de vos enfants <span><a routerLink="">ici</a></span></p>
+    </div> -->
 
-    <div class="utility">
+    <!-- <div class="utility">
       <h2><a routerLink="">Horaires</a></h2>
       <p>Retrouvez les horaires de descente de vos enfants <span><a routerLink="">ici</a></span></p>
-    </div>
+    </div> -->
 
     <div class="utility">
-      <h2><a routerLink="">Options</a></h2>
-      <p>Retrouvez les differentes options (cantine, transport, renforcement, Coran) <span><a routerLink="">ici</a></span> </p>
+      <h2><a routerLink="/option">Options</a></h2>
+      <p>Retrouvez les differentes options (cantine, transport, renforcement, Coran)
+        <span><a routerLink="/option">ici</a></span>
+      </p>
 
     </div>
 
   </div>
 
   <div class="results">
-    <h1>Resultats CFEE 2019</h1>
+
+    <h1>Résultats CFEE 2019</h1>
+
+    <p>
+      A ses débuts, l'école ne comptait qu'un cycle pré-scolaire. Aujourd'hui, elle affiche un cycle complet de
+      la maternelle à l'élémentaire. <br> Des résultats probants et satisfaisants ont été obtenus. Depuis
+      la création de l'école élémentaire, elle enregistre un taux de réussite de 100% au CFEE et à l'entrée en 6e
+      jusqu'en 2019 oú nous avons eu 98,77% au CFEE et 100% à l'entrée en 6e. <br> D'autres distinctions ont suivi,
+      notamment au jeu GESTU oú nos éléves ont remporté la finale zonale en 2016 et partipe successivement aux
+      phases finales en 2017, 2018, 2019 et couronnnés de distinctions.
+    </p>
+
   </div>
 
-  <div class="activities-photos">
+  <!-- <div class="activities-photos">
 
     <div class="title">
-      <h1>Photos activitees 2019</h1>
+      <h1>Photos activités 2019</h1>
     </div>
 
     <div class="photos"></div>
 
-  </div>
+  </div> -->
 
   <app-footer></app-footer>
 
