--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<div class="footer">
+
+  <h2>Aidons nos enfants à atteindre le sommet </h2>
+
+  <div class="links">
+
+    <div class="link">
+      <ul>
+        <li><a routerLink="">Inscrivez votre enfant ici</a></li>
+        <!-- <li><a routerLink="">Nos activites ici</a></li> -->
+        <li><a routerLink="">Retrouvez les differentes options ici</a></li>
+        <li><a routerLink="">Pour toute information supplementaire contactez nous ici </a></li>
+      </ul>
+    </div>
+
+    <div class="link">
+      <ul>
+
+        <!-- <li><a routerLink="">Les horaires ici</a></li> -->
+      </ul>
+    </div>
+
+    <div class="link">
+      <ul>
+
+        <!-- <li><a routerLink="">Les fournitures de vos enfants ici</a></li> -->
+      </ul>
+    </div>
+
+  </div>
+  <p>Copyright &copy; 2020 Groupe Scolaire la Pyramide. Tout les droits reservés </p>
+</div>
