--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,68 @@
-<nav>
-  <img src="assets/img/img2.jpg" alt="">
-  <div class="nav-links">
-      <a routerLink="../accueil">Accueil</a>
-      <a routerLink="">Prescolaire</a>
-      <a routerLink="">Elementaire</a>
-      <a routerLink="">Actualites</a>
-      <a routerLink="">A propos</a>
-      <a routerLink="">Contact</a>
-  </div>
+<div class="bheader">
+  <nav>
+    <a routerLink=""><img src="assets/img/logopyramide.png" alt="logo"></a>
+    <div class="nav-links">
+        <a routerLink="">Accueil</a>
+        <!-- <a routerLink="">Prescolaire</a> -->
+        <a routerLink="/inscription">Inscription</a>
+        <a routerLink="/contact">Contact</a>
+    </div>
+  </nav>
+</div>
 
-</nav>
+<div class="sheader">
+  <mat-sidenav-container class="sidenav-container">
+
+    <mat-sidenav
+        #drawer class="sidenav"
+        fixedInViewport
+        [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'"
+        [opened]="(isHandset$ | async) === false">
+      <div class="clear-button" >
+        <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon" >clear</mat-icon>
+        </button>
+      </div>
+
+      <mat-nav-list class="nav-list">
+        <a mat-list-item routerLink=''>ACCUEIL</a>
+        <hr>
+        <a mat-list-item routerLink='/inscription'>INSCRIPTION</a>
+        <hr>
+        <a mat-list-item routerLink='/contact'>CONTACT</a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar color="white">
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()"
+          *ngIf="isHandset$ | async">
+          <!-- <mat-icon aria-label="Side nav toggle icon">format_align_left</mat-icon> -->
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+
+        </button>
+        <span style="margin: 0 auto; font-size: 12px;"><a routerLink=''
+          style="text-decoration: none; color: black;">
+          G S La Pyramide</a></span>
+          <!-- <span>
+            <a routerLink=''
+          style="text-decoration: none; color: black;">
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </a>
+          </span> -->
+        <!-- <span>Menu</span> -->
+
+      </mat-toolbar>
+      <!-- Add Content Here -->
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+  </div>
