--- a/src/app/inscription-liste/inscription-liste.component.html
+++ b/src/app/inscription-liste/inscription-liste.component.html
@@ -1,5 +1,7 @@
 <h1>Liste des inscriptions</h1>
 
+<a routerLink="../pyradmin"> Retour a l'administration</a>
+
 <div class="inscription-list">
 
   <div class="single-inscription" *ngFor="let inscription of inscriptions">
