--- a/src/app/inscription-liste/inscription-liste.component.scss
+++ b/src/app/inscription-liste/inscription-liste.component.scss
@@ -1,6 +1,15 @@
 h1{
   text-align: center;
 }
+a{
+  margin: 5px auto;
+  text-decoration: none;
+  color: red($color: #535050);
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+  border-radius: 12px;
+}
 .inscription-list{
   text-align: center;
   margin: 20px auto;
@@ -12,5 +21,28 @@ h1{
     background-color: white;
     width:85% ;
     margin: 10px auto;
+  }
+}
+
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .inscription-list{
+    grid-template-columns: 1fr ;//
+  }
+}
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .inscription-list{
+    grid-template-columns: 1fr ;//
+  }
+}
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+@media (max-width: 320px) {
+  .inscription-list{
+    grid-template-columns: 1fr ;//
   }
 }
