changed menu icon and added some missing links

--- a/src/app/after-inscription/after-inscription.component.html
+++ b/src/app/after-inscription/after-inscription.component.html
@@ -1,1 +1,14 @@
-<p>after-inscription works!</p>
+<app-header></app-header>
+
+<div class="whole">
+  <h1>Votre enfant a été inscrit avec succès!</h1>
+  <h3>Nous vous contacterons sous peu pour confirmer l'inscription</h3>
+  <div class="links">
+    <h4>Quels informations souhaiteriez vous avoir ?</h4>
+    <ul>
+      <li><a routerLink="/dossiers-a-fournir">Dossiers à fournir</a></li>
+      <li><a routerLink="/option">Options</a></li>
+      <li><a routerLink="/tarifs">Tarifs</a></li>
+    </ul>
+  </div>
+</div>
