--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,10 +6,10 @@
 
     <div class="link">
       <ul>
-        <li><a routerLink="">Inscrivez votre enfant ici</a></li>
+        <li><a routerLink="/inscription">Inscrivez votre enfant ici</a></li>
         <!-- <li><a routerLink="">Nos activites ici</a></li> -->
-        <li><a routerLink="">Retrouvez les differentes options ici</a></li>
-        <li><a routerLink="">Pour toute information supplementaire contactez nous ici </a></li>
+        <li><a routerLink="/option">Retrouvez les differentes options ici</a></li>
+        <li><a routerLink="/contact">Pour toute information supplementaire contactez nous ici </a></li>
       </ul>
     </div>
 
