--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
           (click)="drawer.toggle()"
           *ngIf="isHandset$ | async">
           <!-- <mat-icon aria-label="Side nav toggle icon">format_align_left</mat-icon> -->
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          <mat-icon aria-label="Side nav toggle icon">format_indent_increase</mat-icon>
 
         </button>
         <span style="margin: 0 auto; font-size: 12px;"><a routerLink=''
